--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Datepicker.css -->
     <link rel="stylesheet" href="src/css/datepicker.css">
-
+    <link rel="shortcut icon" href="#">
     <title>Billed</title>
     <style>
       body {
@@ -40,8 +40,7 @@
   <body>
     <div id="root"></div>
     <!-- Datepicker.js -->
-    <script src="src/app/datepicker.js">
-    </script>
+    <script src="src/app/datepicker.js"></script>
     <script type="module">
       import Router from "./src/app/Router.js"
       import store from "./src/app/Store.js"
